# rechunk-zarr

./: Cargo.toml  LICENSE  README.md
data/example_input.zarr/: .zarray  0
data/example_output.zarr/: .zarray  0
helper/: create_zarr.py  read_zarr.py  requirements
src/: main.rs
