[package]
name = "rechunk_zarr"
version = "0.1.0"
authors = ["Carston Hernke <carston17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.11", features = ["derive"]}
serde_json = {version = "1.0.2"}